--- a/short-client/src/app/globals.css
+++ b/short-client/src/app/globals.css
@@ -1,33 +1,62 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background: 164 85% 97%;
+    --foreground: 160 82% 2%;
+    --card: 164 85% 97%;
+    --card-foreground: 160 82% 2%;
+    --popover: 164 85% 97%;
+    --popover-foreground: 160 82% 2%;
+    --primary: 160 85% 51%;
+    --primary-foreground: 160 82% 2%;
+    --secondary: 201 85% 75%;
+    --secondary-foreground: 160 82% 2%;
+    --muted: 164 84% 20%;
+    --muted-foreground: 160 82% 70%;
+    --accent: 216 85% 61%;
+    --accent-foreground: 160 82% 2%;
+    --destructive: 0 85% 60%;
+    --destructive-foreground: 160 82% 2%;
+    --border: 164 84% 20%;
+    --input: 164 84% 20%;
+    --ring: 216 85% 40%;
+    --radius: 0.5rem;
+  }
+ 
+  .dark {
+    --background: 166 87% 3%;
+    --foreground: 157 80% 98%;
+    --card: 166 87% 3%;
+    --card-foreground: 157 80% 98%;
+    --popover: 166 87% 3%;
+    --popover-foreground: 157 80% 98%;
+    --primary: 160 85% 49%;
+    --primary-foreground: 166 87% 3%;
+    --secondary: 201 84% 25%;
+    --secondary-foreground: 157 80% 98%;
+    --muted: 166 86% 80%;
+    --muted-foreground: 157 80% 98%;
+    --accent: 216 85% 39%;
+    --accent-foreground: 157 80% 98%;
+    --destructive: 0 62% 30%;
+    --destructive-foreground: 157 80% 10%;
+    --border: 166 87% 60%;
+    --input: 166 86% 80%;
+    --ring: 216 85% 60%;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+h2{
+  @apply text-3xl font-bold text-center
 }
